docs/versioned_docs/version-1.1.0/smart-contracts/PSP721/psp721.md
---
sidebar_position: 1
title: PSP721
---

This example shows how you can reuse the implementation of [PSP721](https://github.com/Supercolony-net/openbrush-contracts/tree/main/contracts/token/psp721) token. Also, this example shows how you can customize the logic, for example, to track the number of tokens minted with `next_id`, increasing it with each new token minted, securing a unique id for each token.

## Step 1: Include dependencies

Include dependencies on `psp721` and `brush` in the cargo file.

```toml
[dependencies]
ink_primitives = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

# These dependencies
psp721 = { tag = "v1.0.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }
brush = { tag = "v1.0.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }

[features]
default = ["std"]
std = [
   "ink_primitives/std",
   "ink_metadata",
   "ink_metadata/std",
   "ink_env/std",
   "ink_storage/std",
   "ink_lang/std",
   "scale/std",
   "scale-info",
   "scale-info/std",

   # These dependencies   
   "psp721/std",
   "brush/std",
]
```

## Step 2: Add imports

Replace `ink::contract` macro by `brush::contract`.
Import **everything** from `psp721::traits`.

```rust
#[brush::contract]
pub mod my_psp721 {
   use psp721::traits::*;
```

## Step 3: Define storage

Declare storage struct and declare the field related to the `PSP721Storage` trait. Then you need to derive the `PSP721Storage` trait and mark the corresponding field with the `#[PSP721StorageField]` attribute. Deriving this trait allows you to reuse the default implementation of `PSP721`.

```rust
#[ink(storage)]
#[derive(Default, PSP721Storage)]
pub struct MyPSP721 {
    #[PSP721StorageField]
    psp721: PSP721Data,
}
```

## Step 4: Inherit logic

Inherit implementations of `PSP721` and `PSP721Metadata` traits. You can customize (override) methods in this `impl` block.

```rust
impl PSP721 for MyPSP721 {}

```

## Step 5: Define constructor

Define constructor. Your basic version of `PSP721` contract is ready!

```rust
impl MyPSP721 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }
}
```

## Step 6: Customize your contract

Customize it by adding logic for tracking the number of minted tokens. It will contain a custom `mint_token` function which will handle the id of the newly minted token. Also, we will add the `next_id: u8` field to the structure, which will be increased with each newly minted token. This way we will make sure there will always be added a token with a unique id. 

```rust
#[ink(storage)]
#[derive(Default, PSP721Storage)]
pub struct MyPSP721 {
    #[PSP721StorageField]
    psp721: PSP721Data,
    next_id: u8,
}

impl PSP721 for MyPSP721 {}

impl MyPSP721 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }

    #[ink(message)]
    pub fn mint_token(&mut self) -> Result<(), PSP721Error> {
        self._mint([self.next_id; 32])?;
        self.next_id += 1;
        Ok(())
    }
}
```

Also you can use extensions for psp721 token:

[PSP721Metadata](Extensions/metadata): metadata for PSP721.

[PSP721Mintable](Extensions/mintable): creation of new tokens.

[PSP721Burnable](Extensions/burnable): destruction of contract's tokens.
