docs/versioned_docs/version-1.2.0/smart-contracts/PSP721/psp721.md
---
sidebar_position: 1
title: PSP721
---

This example shows how you can reuse the implementation of [PSP721](https://github.com/Supercolony-net/openbrush-contracts/tree/main/contracts/token/psp721) token. Also, this example shows how you can customize the logic, for example, to track the number of tokens minted with `next_id`, increasing it with each new token minted, securing a unique id for each token.

## Step 1: Include dependencies

Include `brush` as dependency in the cargo file or you can use [default `Cargo.toml`](/smart-contracts/overview#the-default-toml-of-your-project-with-openbrush) template.
After you need to enable default implementation of PSP721 via `brush` features.

```toml
brush = { tag = "v1.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp721"] }
```

## Step 2: Add imports and enable unstable feature

Use `brush::contract` macro instead of `ink::contract`. Import **everything** from `brush::contracts::psp721`.

```rust
#![cfg_attr(not(feature = "std"), no_std)]
#![feature(min_specialization)]

#[brush::contract]
pub mod my_psp721 {
    use brush::contracts::psp721::*;
```

## Step 3: Define storage

Declare storage struct and declare the field related to the `PSP721Storage` trait. Then you need to derive the `PSP721Storage` trait and mark the corresponding field with the `#[PSP721StorageField]` attribute. Deriving this trait allows you to reuse the default implementation of `PSP721`.

```rust
#[ink(storage)]
#[derive(Default, PSP721Storage)]
pub struct MyPSP721 {
    #[PSP721StorageField]
    psp721: PSP721Data,
}
```

## Step 4: Inherit logic

Inherit implementations of `PSP721` and `PSP721Metadata` traits. You can customize (override) methods in this `impl` block.

```rust
impl PSP721 for MyPSP721 {}

```

## Step 5: Define constructor

Define constructor. Your basic version of `PSP721` contract is ready!

```rust
impl MyPSP721 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }
}
```

## Step 6: Customize your contract

Customize it by adding logic for tracking the number of minted tokens. It will contain a custom `mint_token` function which will handle the id of the newly minted token. Also, we will add the `next_id: u8` field to the structure, which will be increased with each newly minted token. This way we will make sure there will always be added a token with a unique id. 

```rust
#[ink(storage)]
#[derive(Default, PSP721Storage)]
pub struct MyPSP721 {
    #[PSP721StorageField]
    psp721: PSP721Data,
    next_id: u8,
}

impl PSP721 for MyPSP721 {}

impl MyPSP721 {
    #[ink(constructor)]
    pub fn new() -> Self {
        Self::default()
    }

    #[ink(message)]
    pub fn mint_token(&mut self) -> Result<(), PSP721Error> {
        self._mint([self.next_id; 32])?;
        self.next_id += 1;
        Ok(())
    }
}
```

You can check an example of the usage of [PSP721](https://github.com/Supercolony-net/openbrush-contracts/tree/main/examples/psp721).
Also you can use extensions for psp721 token:

[PSP721Metadata](Extensions/metadata): metadata for PSP721.

[PSP721Mintable](Extensions/mintable): creation of new tokens.

[PSP721Burnable](Extensions/burnable): destruction of contract's tokens.
